# snapp_crawler

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
snapp/snapp/: dupefilter.py  items.py  middlewares.py  pipelines.py  settings.py
snapp/snapp/spiders/: new_product_spider.py  product_spider.py
