[project]
name = "snapp"
version = "0.1.0"
description = ""
authors = [
    {name = "masoud89",email = "m.lakestani89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scrapy-redis (>=0.9.1,<0.10.0)",
    "jdatetime (>=5.2.0,<6.0.0)",
    "scrapy-rotating-proxies (>=0.6.2,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
